# Eigen_Learning

./: README.md
Optimiaztion/ch2/: CMakeLists.txt  main.cpp
base/: CMakeLists.txt  ch1_test.cpp  test.cpp
base/ch1_DenseMatrixAndArray/: HeaderFile.h  Section1_MatrixClass.hpp  Section2_MatrixAndVectorArithmetic.hpp  Section3_ArrayAndCoefficientwiseOperations.hpp
sophus/: CMakeLists.txt  motion.cpp  test.cpp  test2.cpp  useSophus.cpp
svd_mat/: CMakeLists.txt  main.cpp
